src/core/snapshots/vue_template_compiler__core__parser__test__custom_dir-2.snap
---
source: src/core/parser.rs
expression: dir

---
Dir:
  name: test
  argument: ~
  modifiers:
    - add
  expression:
    content:
      raw: tt
      ops:
        bits: 10
    location:
      start:
        offset: 14
        line: 1
        column: 15
      end:
        offset: 18
        line: 1
        column: 19
  head_loc:
    start:
      offset: 3
      line: 1
      column: 4
    end:
      offset: 13
      line: 1
      column: 14
  location:
    start:
      offset: 3
      line: 1
      column: 4
    end:
      offset: 18
      line: 1
      column: 19

